# ChangeLog for dev-ruby/multipart-post
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/multipart-post/ChangeLog,v 1.6 2011/07/29 04:58:29 graaff Exp $

*multipart-post-1.1.3 (29 Jul 2011)

  29 Jul 2011; Hans de Graaff <graaff@gentoo.org> +multipart-post-1.1.3.ebuild:
  Version bump.

  24 Jul 2011; Thomas Kahle <tomka@gentoo.org> multipart-post-1.1.2.ebuild:
  ~x86 per bug 375153

  14 Jul 2011; Hans de Graaff <graaff@gentoo.org> -multipart-post-1.1.0.ebuild,
  -multipart-post-1.1.1.ebuild:
  Remove old versions.

*multipart-post-1.1.2 (28 May 2011)

  28 May 2011; Hans de Graaff <graaff@gentoo.org> +multipart-post-1.1.2.ebuild:
  Version bump.

*multipart-post-1.1.1 (21 May 2011)

  21 May 2011; Hans de Graaff <graaff@gentoo.org> +multipart-post-1.1.1.ebuild:
  Version bump.

*multipart-post-1.1.0 (13 Mar 2011)

  13 Mar 2011; Hans de Graaff <graaff@gentoo.org>
  +multipart-post-1.1.0.ebuild, +metadata.xml:
  Initial import. New dependency for dev-ruby/faraday.
