@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/multipart-post
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/multipart-post/ChangeLog,v 1.6 2011/07/29 04:58:29 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/multipart-post/ChangeLog,v 1.7 2011/11/20 08:21:44 graaff Exp $
+
+  20 Nov 2011; Hans de Graaff <graaff@gentoo.org> multipart-post-1.1.3.ebuild,
+  +files/multibyte.txt:
+  Add missing file from upstream needed for tests with ruby19.
 
 *multipart-post-1.1.3 (29 Jul 2011)
 
